src/test/ui/resolve/associated-fn-called-as-fn.stderr
error[E0425]: cannot find function `collect_primary` in this scope
  --> $DIR/associated-fn-called-as-fn.rs:6:30
   |
LL |                 '0'..='9' => collect_primary(&c),
   |                              ^^^^^^^^^^^^^^^ help: you might have meant to call the associated function: `Self::collect_primary`

error[E0425]: cannot find function `collect_primary` in this scope
  --> $DIR/associated-fn-called-as-fn.rs:23:30
   |
LL |                 '0'..='9' => collect_primary(&c),
   |                              ^^^^^^^^^^^^^^^ help: you might have meant to call the associated function: `Self::collect_primary`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
